redundant QC metrics table horizontal scroll fixed

--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -1435,7 +1435,7 @@ $badge-item-min-height: 90px;
 		}
 
 		> .table-for-collection {
-			margin-left: 21px;
+			margin-left: 15px;
 			overflow: hidden;
 		}
 
